--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -2,9 +2,9 @@
 <%= form_with url: meetings_path, method: "post" do |form| %>
  <%= form.text_field :subject, placeholder: "Meeting subject ..." %><br><br>
  <%= form.text_field :description, placeholder: "Meeting description ..." %><br><br>
- <%= form.datetime_field :starts %><br><br>
+ <%= form.datetime_field :start_time %><br><br>
  <%= form.datetime_field :complete %><br><br>
  <%= form.text_field :metting_with, placeholder: "Meeting with ..." %><br><br>
- <%= form.submit "Create" %>
- <button><%= link_to "Back", root_path %></button>
+ <%= form.submit "Create", class: "btn btn-primary" %>
+ <%= link_to "Back", root_path, class: "btn btn-warning" %>
 <% end %>
